---------------------------------------------------------------------------------------------------
Version: 1.1.25
  Bugfixes:
    - Fixed Mining Drones dying to Blue Tiberium
    - Fixed Tiberium Centrifuge icon colors being in the wrong order
    - Added missing localisation for some alerts
  Changes:
    - Changed Informatron to an optional dependency
    - Improved balance when used with Space Exploration
    - Tiberium Seed Rockets can no longer spawn Tiberium Blossom Trees close together
    - Renamed Growth Credits to Tiberium Substrate
    - Made the Tiberium Substrate recipes twice as fast (except for the ingredientless recipe)
    - Tiberium now spreads much more rapidly when consuming resource patches
    - Tiberium Military 1 now reduces Tiberium damage taken by 75% instead of 80%
    - Reduced some emission multipliers
  Features:
    - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
    - Added Tiberium Reprocessor structure for more rapidly recycling unused ores into Tiberium Substrate
    - Added an alert for players who are taking damage from Tiberium radiation
    - Added settings for customizing the growth rate of Blue Tiberium
    - Added setting for improving end-game UPS
---------------------------------------------------------------------------------------------------
Version: 1.1.24
  Bugfixes:
    - Fixed SRF emitters being disabled by AOE damage
    - Fixed crashes occurring when new forces were created
    - Fixed speed upgrades not working when Space Exploration is active
---------------------------------------------------------------------------------------------------
Version: 1.1.23
  Bugfixes:
    - Fixed Tiberium ore growing on top of water when certain mods were active (Thanks to Tazzer93 for fixing this with a pull request!)
    - Fixed centrifuging recipes missing ores when Extended Rocket Payloads Continued was active