@@ -11,6 +11,8 @@ tiberium=Tiberium
 tiberium-ore=Green Tiberium
 tiberium-ore-blue=Blue Tiberium
 tiberium-growth-credit=Tiberium Substrate
+tiberium-primed-reactant=Tiberium-Primed Reactant
+tiberium-primed-reactant-blue=Blue Tiberium-Primed Reactant
 tiberium-seed=Liquid Green Tiberium Seed Rocket
 tiberium-seed-blue=Liquid Blue Tiberium Seed Rocket
 tiberium-ion-core=Tiberium Ion Core
@@ -33,7 +35,9 @@ tiberium-growth-credit-void=Accelerate Tiberium Growth
 
 [item-description]
 tiberium-power-plant=Generates vast amounts of power from liquid Tiberium, at the cost of the environment.
-tiberium-growth-credit=A credit for Growth Accelerators to use to increase the yield of Tiberium Nodes.
+tiberium-growth-credit=Used by Growth Accelerators to increase the yield of Tiberium Nodes. It's got what Tiberium craves: it's got electrolytes!
+tiberium-primed-reactant=A condensed pack of Tiberium and catalysts, ready to be transmuted into any ore.
+tiberium-primed-reactant-blue=An energetic pack of Tiberium and catalysts, must be converted into a Tiberium-Primed Reactant before it is safe to use.
 tiberium-network-node=Rapidly harvests Tiberium ore over a large area.
 tiberium-node-harvester=Rapidly harvests Tiberium ore directly from a Tiberium node.  Can permanently remove the Tiberium node if it is depleted.
 tiberium-srf-emitter=Generates a directed Sonic Repulsion Field between horizontally or vertically aligned hubs up to 15 tiles apart. Requires 0.5 MW of power to maintain the fields.
