@@ -350,6 +350,26 @@ data:extend{
 	},
 	{
 		type = "item",
+		name = "tiberium-primed-reactant",
+		icon = tiberiumInternalName.."/graphics/icons/tiberium-crate.png",
+		icon_size = 128,
+		flags = {},
+		subgroup = "a-items",
+		order = "a[tiberium-ore]",
+		stack_size = 200,
+	},
+	{
+		type = "item",
+		name = "tiberium-primed-reactant-blue",
+		icon = tiberiumInternalName.."/graphics/icons/tiberium-crate-blue.png",
+		icon_size = 128,
+		flags = {},
+		subgroup = "a-items",
+		order = "a[tiberium-ore]",
+		stack_size = 200,
+	},
+	{
+		type = "item",
 		name = "tiberium-ion-core",
 		icon = tiberiumInternalName.."/graphics/icons/nuclear-reactor.png",
 		icon_size = 32,
